Fix positioning of the navigation menu on mobile and tablet screens.

--- a/public/css/base/main.css
+++ b/public/css/base/main.css
@@ -2,6 +2,10 @@
   pointer-events: none;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -1104,6 +1108,10 @@
 }
 
 @media (min-width: 900px) {
+  .tablet\:fixed {
+    position: fixed;
+  }
+
   .tablet\:relative {
     position: relative;
   }
